test/files/neg/bug1181.check
bug1181.scala:9: error: missing parameter type
     _ => buildMap(map.updated(keyList.head, valueList.head), keyList.tail, valueList.tail)
     ^
one error found
